Move away of deprecated Number constructors.
Change-Id: I4c2b5c13fa55633705afbf3253a8b4eb8428985c
Signed-off-by: Alexander Kurtakov <akurtako@redhat.com>