@@ -48,9 +48,9 @@ public class AntLogAdapter implements ILog {
 			String statusMessage = status.getMessage();
 			String exceptionMessage = status.getException() != null ? status.getException().getMessage() : null;
 
-			log.invoke(antLog, new Object[] {statusMessage, new Integer(mapLogLevels(status.getSeverity()))});
+			log.invoke(antLog, new Object[] {statusMessage, Integer.valueOf(mapLogLevels(status.getSeverity()))});
 			if (exceptionMessage != null && !exceptionMessage.equals(statusMessage))
-				log.invoke(antLog, new Object[] {exceptionMessage, new Integer(mapLogLevels(status.getSeverity()))});
+				log.invoke(antLog, new Object[] {exceptionMessage, Integer.valueOf(mapLogLevels(status.getSeverity()))});
 			IStatus[] nestedStatus = status.getChildren();
 			if (nestedStatus != null) {
 				for (int i = 0; i < nestedStatus.length; i++) {
